@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-06-22T01:27:51Z",
-  "count_outdated" : 314,
-  "uniques_outdated" : 202,
-  "count" : 341,
+  "timestamp" : "2022-06-22T16:22:37Z",
+  "count_outdated" : 316,
+  "uniques_outdated" : 203,
+  "count" : 342,
   "uniques" : 217,
   "clones" : [
-    {
-      "timestamp": "2022-06-08T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-06-09T00:00:00Z",
       "count": 3,
